Removed display flex, justify-content/align-items center & fix a bug

--- a/css/main.css
+++ b/css/main.css
@@ -22,15 +22,6 @@ body {
   line-height: 1.4;
   color: white;
   background: #181f2a;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .header {
