--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -49,8 +49,4 @@ html {
     line-height: 1.4;
     color: $color-neutral-white;
     background: $color-primary-bark-blue-main-bg;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
